# StayEasy

./: .gitignore  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py
alembic/versions/: 8252633d3707_initial_schema.py
app/: main.py
app/config/: database_config.py  redis_config.py
app/modules/auth/: auth_middlewares.py  dependencies.py
app/modules/pms/: dependencies.py
app/utils/: exception_handlers.py  exceptions.py  imgae_utils.py  logging.py  schemas.py
my-react-app/: .env.example  README.md  index.html  package-lock.json  package.json
my-react-app/src/: App.tsx  index.css  main.tsx
my-react-app/src/components/: BuildingScene.tsx  CategoryFilter.tsx  CountryCurrencyPicker.tsx  CountrySelect.tsx  DestinationCard.tsx  Footer.tsx  HeroSection.tsx  HotelCard.tsx  Logo.tsx  Navbar.tsx  Newsletter.tsx  OtherHotels.tsx  PhoneInput.tsx  PopularDestinations.tsx  RoomSetup.tsx  RoomSetupSection.tsx  SearchBar.tsx  SearchCard.tsx  Testimonials.tsx  WhyStayEasy.tsx
my-react-app/src/context/: AuthContext.tsx
my-react-app/src/data/: countries.tsx  hotels.ts  phoneCodes.ts  worldCountries.ts
my-react-app/src/pages/: BecomeAHost.tsx  CountryPage.tsx  HostLandingPage.tsx  HostLogin.tsx  HostPortalPage.tsx  HostSignup.tsx  HotelDetailPage.tsx  LandingPage.tsx  Login.tsx  Signup.tsx
my-react-app/src/styles/: fonts.css  theme.css
my-react-app/src/types/: index.ts
tests/: conftest.py
tests/modules/auth/: test_guests_router.py  test_users_router.py
tests/modules/pms/: __init__.py  conftest.py  test_offers_router.py  test_properties_router.py  (+2 more)
(+40 files in other folders)
